--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -23,9 +23,9 @@ http {
                       application/atom+xml;
 
     # Configuration containing list of application servers
-    upstream uwsgicluster {
+    upstream django {
 
-        server 127.0.0.1:8080;
+        server 127.0.0.1:8001;
         # server 127.0.0.1:8081;
         # ..
         # .
@@ -37,32 +37,17 @@ http {
     server {
 
         # Running port
-        listen 80;
+        listen 8000;
 
         server_name myapp.example.com;
-        root /var/www/myapp/html;
+        
 
-        # Settings to by-pass for static files 
-        location ^~ /static/  {
-
-            # Example:
-            # root /full/path/to/application/static/file/dir;
-            root /app/static/;
-
-        }
-
-        # Serve a static file (ex. favico) outside static dir.
-        location = /favico.ico  {
-
-            root /app/favico.ico;
-
-        }
-
+        
         # Proxying connections to application servers
         location / {
 
             include            uwsgi_params;
-            uwsgi_pass         uwsgicluster;
+            uwsgi_pass         django;
 
             proxy_redirect     off;
             proxy_set_header   Host $host;
