--- a/docker/logstash/logstash.conf
+++ b/docker/logstash/logstash.conf
@@ -2,6 +2,10 @@ input {
 	tcp {
 		port => 5000
 	}
+    kafka {
+        zk_connector => "localhost:2181",
+        topic_id => "test"
+    }
 }
 
 output {
