--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       ES_JAVA_OPTS: "-Xms1g -Xmx1g"
     networks:
       - elk
+    depends_on: 
+      - logstash
   logstash:
     build: logstash/
     ports:
@@ -17,7 +19,7 @@ services:
     networks:
       - elk
     depends_on:
-      - elasticsearch
+      - kafka
   kibana:
     build: kibana/
     ports:
@@ -34,7 +36,6 @@ services:
     environment:
       ADVERTISED_HOST: "localhost"
       ADVERTISED_PORT: "9092"
-    #command: /opt/kafka_2.11-0.10.1.0/bin/kafka-console-producer.sh --broker-list localhost:9092 --topic test && /opt/kafka_2.11-0.10.1.0/bin/kafka-console-consumer.sh --zookeeper localhost:2181 --topic test
     networks: 
       - elk
   app:
@@ -45,7 +46,7 @@ services:
       - elk
     volumes: 
       - ../app:/var/app
-    command: /bin/bash -c "uwsgi --socket :8001 --chdir /var/app/ --wsgi-file flights/wsgi.py & service nginx start & nginx -g 'daemon off;'"
+    command: /bin/bash -c "uwsgi --socket :8001 --chdir /var/app/ --wsgi-file flights/wsgi.py & sleep 10 && service nginx start & nginx -g 'daemon off;'"
 
 networks:
   elk:
