Update logstash docker

--- a/docker/logstash/Dockerfile
+++ b/docker/logstash/Dockerfile
@@ -1,3 +1,5 @@
 FROM logstash:5.2.1
 
-COPY logstash.conf /etc/logstash/conf.d/
+COPY logstash.conf /usr/share/logstash/config/
+
+CMD ["-f", "/usr/share/logstash/config/logstash.conf"]
