--- a/docker/logstash/logstash.conf
+++ b/docker/logstash/logstash.conf
@@ -3,8 +3,10 @@ input {
 		port => 5000
 	}
     kafka {
-        zk_connector => "localhost:2181",
+        zk_connect => "kafka:2181"
+		group_id => "logstash"
         topic_id => "test"
+		consumer_threads => 16
     }
 }
 
