--- a/docker/logstash/logstash.conf
+++ b/docker/logstash/logstash.conf
@@ -3,10 +3,8 @@ input {
 		port => 5000
 	}
     kafka {
-        zk_connect => "kafka:2181"
-		group_id => "logstash"
-        topic_id => "test"
-		consumer_threads => 16
+        bootstrap_servers => "kafka:2181"
+        topics => ["test"]
     }
 }
 
