--- a/docker/logstash/logstash.conf
+++ b/docker/logstash/logstash.conf
@@ -1,15 +1,19 @@
 input {
-	tcp {
-		port => 5000
-	}
     kafka {
-        bootstrap_servers => "kafka:2181"
+        bootstrap_servers => "kafka:9092"
         topics => ["test"]
+		group_id => "logstash"
     }
+	stdin {
+
+	}
 }
 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 	}
+	stdout {
+
+	} 
 }
